--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
     <header>
     <nav>
-        <a href=""> 
-            <img src="./img/webstudio.png" alt="WebStudio">
-        </a>
+        <a href=""> WebStudio</a>
         <ul>
             <li>
                 <a href="">Студия</a> 
@@ -41,6 +39,7 @@
         </section>
 
         <section>
+            <h2 hidden>Наши преимущества и сильные стороны</h2>
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -63,19 +62,25 @@
 
         <section>
             <h2>Чем мы занимаемся</h2>
-            <li>
+            <ul>
+                <li>
                 <img src="./img/img-1.png" alt="работа за оффисным столом"
                 width="370"
                 height="294">
-            
+                </li>
+                
+                <li>
                 <img src="./img/img-2.png" alt="креатив мобильного интерфейса"
                 width="370"
                 height="294">
+                </li>
 
+                <li>
                 <img src="./img/img-3.png" alt="выбор цвета на планшете" 
                 width="370" 
                 height="294">
-            </li>
+                </li>
+            </ul>
         </section>
 
         <section>
@@ -120,10 +125,10 @@
     </main>
 
     <footer>
-            <a href=""><img src="./img/webstudio.png" alt="WebStudio"></a>
+            <a href=""> WebStudio </a>
             <ul>
                 <li>
-                    <a href="adress:г. Киев, пр-т Леси Украинки,26">г. Киев, пр-т Леси Украинки, 26</a>
+                    <a href="">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li>
                     <a href="mailto:info@example.com">info@example.com</a>
